--- a/src/index.css
+++ b/src/index.css
@@ -1,40 +1,38 @@
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  margin: 40px;
-}
-
-input,
-select {
-  margin: 0 8px;
-  padding: 4px 8px;
-  font: inherit;
-}
-
-button {
-  text-transform: uppercase;
-  font-weight: bold;
-  padding: 6px 8px;
-  cursor: pointer;
-}
-
-.inputs {
   background-color: #f7f7f7;
-  padding: 32px;
+  color: #444;
 }
 
-.inputs > * + * {
-  margin-top: 20px;
+.layout {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  gap: 32px;
+  height: 100dvh;
 }
 
-.balance {
-  position: absolute;
-  top: 40px;
-  right: 40px;
-  background-color: #f7f7f7;
-  padding: 24px 32px;
-  font-weight: bold;
-  font-size: 32px;
-  min-width: 180px;
-  text-align: center;
+/* https://dev.to/afif/i-made-100-css-loaders-for-your-next-project-4eje */
+.loader {
+  width: 45px;
+  aspect-ratio: 0.75;
+  --c: no-repeat linear-gradient(#333 0 0);
+  background: var(--c) 0% 50%, var(--c) 50% 50%, var(--c) 100% 50%;
+  background-size: 20% 50%;
+  animation: loading 1s infinite linear;
+}
+
+@keyframes loading {
+  20% {
+    background-position: 0% 0%, 50% 50%, 100% 50%;
+  }
+  40% {
+    background-position: 0% 100%, 50% 0%, 100% 50%;
+  }
+  60% {
+    background-position: 0% 50%, 50% 100%, 100% 0%;
+  }
+  80% {
+    background-position: 0% 50%, 50% 50%, 100% 100%;
+  }
 }
